Prevent horizontal scrolling

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,7 @@ body {
   flex-direction: column;
   min-height: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 body > .content,
